JumpScript/tests/baselines/reference/constructorArgsErrors3.errors.txt
tests/cases/compiler/constructorArgsErrors3.jump(2,25): error TS1028: Accessibility modifier already seen.


==== tests/cases/compiler/constructorArgsErrors3.jump (1 errors) ====
    class foo {
        constructor (public public a: number) {
                            ~~~~~~
!!! error TS1028: Accessibility modifier already seen.
        }
    }
    